@@ -56,6 +56,7 @@
 	(PokerTableTestCase.test18_handReplay): Added rake check.
 	(PokerTableTestCase.test08_player_has_trouble_joining): Added
 	isSerialObserver calls.
+	(PokerTableTestCase.test20altForNewClientAPI_quitting): Wrote function.
 
 	* pokernetwork/pokertable.py (PokerTable.destroy): Added FIXME note.
 	(PokerTable.destroyPlayer): Added FIXME note.
